--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,7 +1,7 @@
 menu {
     width: 100px;
     height: 100%;
-    background-color:red;
+    background-color:purple;
     display: flex;
     flex-direction: column;
     align-items: center;
