Lerkor-dev update

--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,10 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.App{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
